--- a/app/src/main/res/layout/groupe_acl.xml
+++ b/app/src/main/res/layout/groupe_acl.xml
@@ -14,7 +14,7 @@
         android:layout_marginRight="6dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        android:src="@drawable/Koala" >
+        android:src="@drawable/Penguins" >
     </ImageView>
 
     <TextView
@@ -27,6 +27,5 @@
         android:text="text"
         android:textSize="26sp" >
     </TextView>
-
 
 </LinearLayout>
