--- a/app/src/main/res/layout/activity_accueil_classement.xml
+++ b/app/src/main/res/layout/activity_accueil_classement.xml
@@ -1,46 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="match_parent">
+
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.marcmenard.applivisiteur.accueil_classement">
 
-        <Button
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="20dp">
+
+            <TextView
+                android:id="@+id/choix_gr"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="20dp"
+                android:layout_margin="10dp"
+                android:background="#ffffff"
+                android:text="@string/accueil_classement"
+                android:textAlignment="center"
+                android:textColor="#A22C43"
+                android:textSize="18sp" />
+
+        <FrameLayout
             android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:background="#A22C43">
+
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#f4e6b5"
+                android:textColor="#ffffff"
+                android:layout_margin="3dp"
+                android:spinnerMode="dropdown"
+                android:id="@+id/spinner" />
+
+
+        </FrameLayout>
+
+        <ImageView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/groupe_1"
-            android:id="@+id/buttongr"
-            android:layout_gravity="center_horizontal"
-            android:content="@+id/contentGR"/>
-
-        <ListView
-            android:id="@id/contentGR"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_below="@id/buttongr"
-            android:visibility="invisible"/>
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/groupe_2"
-            android:id="@+id/buttongr2"
-            android:layout_gravity="center_horizontal"
-            android:paddingTop="20dp"
-            android:layout_below="@id/buttongr"
-            android:content="@+id/contentGR2"/>
-
-        <ListView
-            android:id="@id/contentGR2"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/buttongr2"
-            android:visibility="visible"/>
+            android:layout_weight="1"
+            android:id="@+id/logo_accueil"
+            android:src="@drawable/logne_boulogne"/>
 
 
 
-</RelativeLayout>
+
+    </LinearLayout>
+
+
+
+    </RelativeLayout>
+
+</ScrollView>
