--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,14 +15,22 @@
         android:orientation="vertical"
         android:padding="20dp">
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:id="@+id/logo_accueil"
+            android:src="@drawable/logne_boulogne"/>
+
         <Space
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:layout_weight="0.2" />
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_gravity="center"
             android:layout_weight="1">
 
             <Button
@@ -31,14 +39,19 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:padding="20dp"
+                android:background="#A22C43"
                 android:text="@string/classements"
+                android:textColor="#ffffff"
                 android:textSize="18sp" />
+
+
 
         </FrameLayout>
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_gravity="center"
             android:layout_weight="1">
 
             <Button
@@ -47,15 +60,14 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:padding="20dp"
+                android:background="#A22C43"
                 android:text="@string/plannings"
+                android:textColor="#ffffff"
                 android:textSize="18sp" />
 
         </FrameLayout>
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
-
     </LinearLayout>
+
+
 </RelativeLayout>
