--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="NoTitleBar" parent="Theme.AppCompat.Light.NoActionBar">
+    </style>
+    <style name="NoTitleBar.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="NoTitleBar.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
